admin/src/main/webapp/admin/resources/css/admin.css
body {background: #e9e9e9; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding: 0;}

.container-fluid {padding-left: 0;}

header .menu-options {padding-top: 10px;}
footer {font-size: 13px; font-weight: 700; padding: 0; text-align: center; color: #222;}

header {height: 55px; }

#nav-container {
    width: 16%;
    position: fixed;
    height: 100%;
    top: 55px;
    background: #222;
    overflow: auto;
}

#content-container {
    position: relative;
    left: 16%;
    width: 84%;
}

#gwt-component label {
	display: inline-block;
	text-align: left;
}

#nongwt-component, #gwt-component { margin: 20px 20px 0 20px; }

.navbar-inverse .navbar-inner {
    background: #4a4a4a;
    background-image: -moz-linear-gradient(top,#444,#222);
    background-image: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
    background-image: -webkit-linear-gradient(top,#444,#222);
    background-image: -o-linear-gradient(top,#444,#222);
    background-image: linear-gradient(to bottom,#444,#222);
    box-shadow: 1px 1px 2px #000;
}
.navbar-inner .brand {margin-left: 10px;}
.navbar-inner .brand img {padding: 5px; width: 145px;}
.navbar-inner .logout {margin-left: 20px;}

#loading-placeholder {margin: 10px 0 0 0; width: 200px;}
.progress-striped .bar {background-color: #899e3c; font-weight: 700; text-shadow: 1px 1px 1px #222;}
#loading-placeholder, .progress-striped .bar {border-radius: 0;}

#modules {background: #222; padding-bottom: 30px; }
#modules > .nav {background: #222; padding-bottom: 20px;}

.nav-header {margin: 0; padding: 0;}
.nav li + .nav-header {margin-top: 0;}
.nav a.module-header {background: #444; border: 1px solid #222; box-shadow: inset 1px 1px 1px #666; color: #fff; font-size: 12px; font-weight: 600; padding: 16px 10px; text-shadow: 1px 1px 1px #000;}
.nav a.module-header:hover {background: #4f4f4f;}
.nav a.module-header i {margin-right: 8px;}

.nav .module {background: #2a2a2a; font-size: 11px; margin-left: 0;}
.nav .module li a {border-top: 1px solid #222; box-shadow: #444 1px 1px 1px inset; color: #fff; font-size: 12px; font-weight: 400; text-shadow: none; padding: 10px 37px;}
.nav .module li a.active, .nav .module li a.active:hover {background: #899e3c; box-shadow: #222 1px 1px 25px inset; text-shadow: #000 1px 1px 1px; font-size: 12px; font-weight: 600;}
.nav .module li a:hover {background: #3a3a3a;}

.dropdown-menu li > a:hover, .dropdown-submenu:hover > a {background: #444;}

/*turn off rounded corners for the following components*/
.alert, .btn, .well, .navbar-search .search-query, .label, .btn-group > .btn:first-child, .btn-group > .btn, .breadcrumb {border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;}

/** login **/
#login {
    background: #4a4a4a;
    background: -moz-linear-gradient(top,#3a3a3a,#4a4a4a);
    background: -webkit-gradient(linear, left top, left bottom, from(#3a3a3a), to(#4a4a4a));
    background: -webkit-linear-gradient(top,#3a3a3a,#4a4a4a);
    background: -o-linear-gradient(top,#3a3a3a,#4a4a4a);
    background: linear-gradient(to bottom,#3a3a3a,#4a4a4a);
    box-shadow: 0 0 10px #444;
    padding: 10px 20px;
    margin-top: 55px;
}
#login, #security-options {width: 450px; margin-left: auto; margin-right: auto;}
#login #logo img {display: block; margin-left: 10px; width: 40%;}
#login form {margin-top: 30px;}
#login label {color: #fff; text-shadow: 1px 1px 1px #000;}
#login input {border: 1px solid #222; border-radius: 0;}
#login button[type="submit"] {border: 1px solid #444; color: #fff; background: #95ad42; text-shadow: 1px 1px 1px #000; border-radius: 0;}
#messages p.alert {margin: 15px auto; width: 400px;}
#options {margin-top: 20px; text-align: center;}
#options a {font-size: 12px; margin: 0 5px; color: #7c9036; text-decoration: underline;}

span.help-inline {
	padding-right: 5px;
}

span.conditionFieldType {
	display: block;
	text-transform: uppercase;
	font-size: 11px;
	color: #666;
}

span.conditionFieldType:before {
	content: "(";
}

span.conditionFieldType:after {
	content: ")";
}

ul.conditionList {
	list-style-type: none;
	margin-left: 0;
}

ul.conditionList li {
	margin-bottom: 5px;
}

/*============================= Bootstrap Overrides =============================*/
/*===============================================================================*/
label {
    margin-bottom: 0;
}


input[type="radio"] {
    margin: 0 0 5px;
}

select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
    border-radius: 0;
    margin-bottom: 0;
}

/*============================= Catalog -> Offers =============================*/
/*===============================================================================*/

.bl-dynamic-form {
    border: 1px solid #C0C3C7;
    border-top: none;
}

.bl-form {

}

.bl-promo-header {
    background: none repeat scroll 0 0 #666666;
    border-bottom: 1px solid #444444;
    border-top: 1px solid #444444;
    color: #FFFFFF;
    font-size: 14px;
    font-weight: bold;
    padding: 4px 8px;
    text-shadow: 1px 1px 1px #000000;
}

.bl-promo-section {
    background: none repeat scroll 0 0 #DDDDDD;
    box-shadow: 1px 1px 3px #444444 inset;
}

.bl-promo-question {
    font-size: 12px;
    font-weight: bold;
}

.bl-promo-question-answers {
    margin: 0 10px;
}

.bl-promo-question-radio-labels label {
    font-size: 12px;
}

.bl-rich-text-item, .bl-rich-text-itemDisabled {
    background: none repeat scroll 0 0 #EEEEEE;
    border: 1px solid #CCCCCC;
    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, .075) inset;
    overflow: scroll;
    padding: 4px 6px;
    max-width: 480px;
    max-height: 250px;
    min-height: 100px;
}

